--- a/UI/ui.yaml
+++ b/UI/ui.yaml
@@ -67,16 +67,14 @@ Forms:
           type: flavor
           label: Instance flavor
           description: >-
-            Select registered in Openstack flavor. Consider that application performance
-            depends on this parameter.
+            Select a flavor.
           required: false
         - name: osImage
           type: image
           imageType: linux
           label: Instance image
           description: >-
-            Select a valid image for the application. Image should already be prepared and
-            registered in glance.
+            Select an image.
         - name: keyPair
           type: keypair
           label: Key Pair
